# making-history-count

./: .gitignore  README.md  pyproject.toml
OCR_OUTPUT/AS_DATA/: 1900.csv  1901.csv
OCR_OUTPUT/AS_TSV/: 1900.tsv  1901.tsv
PREPROCESSED/: 1900.tiff  1901.tiff
making_history/: convert_tesseract_data_to_table.py  preprocess.py  run_OCR.py
making_history/table_structure/: table_structure.py
