[tool.poetry]
name = "making-history"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "making_history"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
opencv-python = "^4.7.0.72"
pytesseract = "^0.3.10"
pandas = "^2.0.2"
XlsxWriter = "^3.1.2"
click = "^8.1.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
